# segbot-sim

./: Dockerfile  README.md  docker-compose.yml
entrypoint/: gazebo-entrypoint.sh
install/: i_dep.sh
src/realsense2_description/urdf/: _d435.urdf.xacro
src/segbot_gazebo/: CMakeLists.txt  package.xml
src/segbot_gazebo/launch/: segbot_office.launch
src/segbot_gazebo/worlds/: office.world
src/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
